--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
     前往股票頁面2
 </button>
 
+<!-- 按鈕 -->
 <button type="button" id="button1" onclick="goToPurchasePage()">
+    前往內購頁
+</button>
 
 </body>
 </html>
