--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>跳轉按鈕</title>
     <script language="javascript">
-    // 呼叫前往購買頁面
-    function goToPurchasePage() {
-        window.webkit.messageHandlers.CMJs.postMessage("goToPurchasePage"); // iOS 的通知方式
+    window.onload = function() {
+        document.getElementById("button1").onclick = function() {
+                // 發送訊息到 iOS App
+                window.webkit.messageHandlers.CMJs.postMessage("goToPurchasePage");
+            };
+        };
     }
     </script>
 </head>
@@ -24,8 +27,13 @@
 </button>
 
 <!-- 按鈕 -->
-<button type="button" id="button1" onclick="goToPurchasePage()">
-    前往內購頁
+<button id="button1" onclick="goToPurchasePage()">
+    前往內購頁1
+</button>
+
+    <!-- 按鈕 -->
+<button onclick="window.webkit.messageHandlers.CMJs.postMessage('goToPurchasePage')">
+    前往內購頁2
 </button>
 
 </body>
