--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
         //CMJs.goToPurchasePage(); // Android 的通知方式
         window.webkit.messageHandlers.CMJs.postMessage('goToPurchasePage'); // iOS 的通知方式
     }
+
+    window.onload = function() {
+        document.getElementById("button1").onclick = function() {
+            goToPurchasePage();
+        };
+    };
     </script>
 </head>
 <body>
@@ -25,7 +31,7 @@
 </button>
 
 <!-- 按鈕 -->
-<button id="button1" onclick="goToPurchasePage()">
+<button id="button1">
     前往內購頁1
 </button>
 
